--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.4",
-        "doctrine/orm": "^3.3",
+        "doctrine/orm": "*",
+        "nelmio/api-doc-bundle": "^4.37",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.0",
         "symfony/asset": "6.4.*",
@@ -96,6 +97,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
+        "squizlabs/php_codesniffer": "^3.11",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
         "symfony/debug-bundle": "6.4.*",
